# nprojects

./: .gitignore  CONCEPT.md  DEVLOG_PICKUP.md  README.md  README_DEV.md  README_QUICK.md  pyproject.toml
nautobot_intent_catalog/: __init__.py  actual_facts.py  analysis.py  ansible_inventory.py  deployment_profiles.py  dnsmasq.py  evaluations.py  filters.py  forms.py  importers.py  jobs.py  loaders.py  models.py  names.py  navigation.py  production_inventory.py  production_inventory_contract.py  tables.py  urls.py  views.py
nautobot_intent_catalog/migrations/: 0001_initial.py  0002_ipam_intent_contract.py  0003_desired_node_actual_types.py  0004_service_placement_operational_config.py  0005_remove_retired_expected_spec_keys.py  0006_deployment_profile_projection.py  0007_placement_config_schema_default.py
nautobot_intent_catalog/operations/: __init__.py  hosts.py  ipam.py  placements.py
nautobot_intent_catalog/tests/: __init__.py  test_actual_facts.py  test_analysis.py  test_ansible_inventory.py  test_deployment_profiles.py  test_dnsmasq.py  test_evaluations.py  test_importers.py  test_jobs_import.py  test_loaders.py  test_names.py  test_operations_hosts.py  test_operations_ipam.py  test_operations_placements.py  test_production_inventory.py  test_production_inventory_contract.py  test_templates.py
nautobot_service_catalog/: __init__.py  analysis.py  filters.py  forms.py  importers.py  jobs.py  loaders.py  models.py  navigation.py  tables.py  urls.py  views.py
nautobot_service_catalog/migrations/: 0001_initial.py
nautobot_service_catalog/tests/: __init__.py  (+3 more)
(+16 files in other folders)
