[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-service-catalog"
version = "0.2.1"
description = "Nautobot app for displaying and analyzing cluster service repositories."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://example.invalid/nautobot-service-catalog"

[tool.setuptools.packages.find]
include = ["nautobot_service_catalog*"]

[tool.setuptools.package-data]
nautobot_service_catalog = ["templates/**/*.html"]
