[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautobot-intent-catalog"
version = "0.3.9"
description = "Nautobot app for managing and analyzing cluster desired state and intent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0-1.0" }
dependencies = [
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://example.invalid/nautobot-intent-catalog"

[tool.setuptools.packages.find]
include = ["nautobot_intent_catalog*"]

[tool.setuptools.package-data]
nautobot_intent_catalog = ["templates/**/*.html"]
